--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -715,7 +715,7 @@ body {
   posision: relative; }
 
 #page-title {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-size: 150%; }
 
 header {
@@ -732,7 +732,7 @@ nav {
   font-size: 75%; }
   nav ul {
     float: left; }
-    nav ul #article-title {
+    nav ul .title {
       border-right: solid 1px #CCC;
       padding: 0.5em 1em; }
     nav ul li {
@@ -748,12 +748,25 @@ nav {
       background-color: #000;
       color: #FFF; }
 
-aside section {
+.editor {
+  text-align: right; }
+  .editor textarea {
+    width: 100%;
+    height: 30em;
+    margin-bottom: 0.5em; }
+  .editor button {
+    width: 10em; }
+
+aside {
   border-right: solid 1px #CCC;
   padding-right: 0.5em; }
 
 footer {
+  margin-top: 2em;
   border-top: solid 1px #CCC; }
+  footer p {
+    margin: 0.5em 0;
+    text-align: right; }
 
 a {
   text-decoration: underline; }
