--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -19,7 +19,7 @@ body {
 }
 
 #page-title {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-size: 150%;
 }
 
@@ -40,7 +40,7 @@ nav {
   ul {
     float: left;
 
-    #article-title {
+    .title {
       border-right: solid 1px #CCC;
       padding: 0.5em 1em;
     }
@@ -67,18 +67,36 @@ nav {
   }
 }
 
+.editor {
+  text-align: right;
+
+  textarea {
+    width: 100%;
+    height: 30em;
+    margin-bottom: 0.5em;
+  }
+
+  button {
+    width: 10em;
+  }
+}
+
 aside {
   h2 {
   }
 
-  section {
-    border-right: solid 1px #CCC;
-    padding-right: 0.5em;
-  }
+  border-right: solid 1px #CCC;
+  padding-right: 0.5em;
 }
 
 footer {
+  margin-top: 2em;
   border-top: solid 1px #CCC;
+
+  p {
+    margin: 0.5em 0;
+    text-align: right;
+  }
 }
 
 a {
